--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <button onclick="window.location.href='LR(0)语法分析器/index.html'">跳转</button>
+    <button onclick="window.location.href='LR(0)语法分析器/indext.html'">跳转</button>
 </body>
 
 </html>
